--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=momgodb://localhost:27017/spring_boot
+spring.data.mongodb.uri=mongodb://localhost:27017/spring_boot
 config.uploads.path=C://Users//Acer//Documents//Spring Boot//SpringWebFlux//Uploads//
